# simple_outfit_compatibility

./: .gitignore  README.md  main.py  pyproject.toml
data/metadata/: catalog.csv
notebooks/: 01_environment_check.ipynb  02_build_catalog_embeddings.ipynb  03_recommend_top5.ipynb
src/soc/: config.py
src/soc/caption/: caption_base.py  caption_factory.py  caption_florence.py  caption_mock.py
src/soc/data/: catalog.py  categories.py  loaders.py
src/soc/explain/: formatter.py  generate.py  llm_base.py  llm_factory.py  llm_mock.py  llm_ollama.py  prompt_builder.py
src/soc/inference/: recommend.py
src/soc/models/: clip_encoder.py  retriever.py
src/soc/utils/: inspect_results.py  visualize.py
